--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,39 @@
-cmake_minimum_required(VERSION 2.8.12)
+cmake_minimum_required(VERSION 3.20)
 
-# Set extension name here
-set(TARGET_NAME quack)
+set(TARGET_NAME duckdb_bigquery)
+project(${TARGET_NAME})
+set(CMAKE_CXX_STANDARD 20)
+#set(CMAKE_CXX_STANDARD 14)
 
-# DuckDB's extension distribution supports vcpkg. As such, dependencies can be added in ./vcpkg.json and then
-# used in cmake with find_package. Feel free to remove or replace with other dependencies.
-# Note that it should also be removed from vcpkg.json to prevent needlessly installing it..
-find_package(OpenSSL REQUIRED)
-
+find_package(google_cloud_cpp_bigquery REQUIRED)
+find_package(google_cloud_cpp_common REQUIRED)
+find_package(google_cloud_cpp_grpc_utils REQUIRED)
+find_package(google_cloud_cpp_storage REQUIRED)
+find_package(cpprestsdk REQUIRED)
+find_package(nlohmann_json REQUIRED)
+find_package(Arrow REQUIRED)
+find_package(Threads)
 set(EXTENSION_NAME ${TARGET_NAME}_extension)
 set(LOADABLE_EXTENSION_NAME ${TARGET_NAME}_loadable_extension)
 
-project(${TARGET_NAME})
-include_directories(src/include)
+set(BIGQUERY_INCLUDE_DIR
+${CMAKE_BINARY_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}/include/)
+include_directories(${BIGQUERY_INCLUDE_DIR})
 
-set(EXTENSION_SOURCES src/quack_extension.cpp)
+add_subdirectory(src)
 
-build_static_extension(${TARGET_NAME} ${EXTENSION_SOURCES})
-build_loadable_extension(${TARGET_NAME} " " ${EXTENSION_SOURCES})
+# set(PARAMETERS "-no-warnings")
+build_loadable_extension(${TARGET_NAME} ${ALL_OBJECT_FILES})
 
-# Link OpenSSL in both the static library as the loadable extension
-target_link_libraries(${EXTENSION_NAME} OpenSSL::SSL OpenSSL::Crypto)
-target_link_libraries(${LOADABLE_EXTENSION_NAME} OpenSSL::SSL OpenSSL::Crypto)
-
-install(
-  TARGETS ${EXTENSION_NAME}
-  EXPORT "${DUCKDB_EXPORT_SET}"
-  LIBRARY DESTINATION "${INSTALL_LIB_DIR}"
-  ARCHIVE DESTINATION "${INSTALL_LIB_DIR}")
+# Loadable binary
+target_include_directories(${LOADABLE_EXTENSION_NAME}
+                           PRIVATE include ${BIGQUERY_INCLUDE_DIR})
+target_link_libraries(${LOADABLE_EXTENSION_NAME} 
+OpenSSL::SSL OpenSSL::Crypto
+google-cloud-cpp::bigquery google-cloud-cpp::common
+google-cloud-cpp::grpc_utils google-cloud-cpp::storage
+cpprestsdk::cpprest
+nlohmann_json::nlohmann_json
+Threads::Threads
+Arrow::arrow_static
+)
