--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -14,10 +14,11 @@ concurrency:
 jobs:
   duckdb-stable-build:
     name: Build extension binaries
-    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@v0.10.1
+    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@v1.0.0
     with:
-      duckdb_version: v0.10.1
-      extension_name: duckdb_bigquery
+      duckdb_version: v1.0.0
+      extension_name: h3
+      exclude_archs: "windows_amd64_rtools"
 
   duckdb-stable-deploy:
     name: Deploy extension binaries
@@ -25,6 +26,8 @@ jobs:
     uses: ./.github/workflows/_extension_deploy.yml
     secrets: inherit
     with:
-      duckdb_version: v0.10.1
-      extension_name: duckdb_bigquery
+      duckdb_version: v1.0.0
+      extension_name: h3
+      exclude_archs: "windows_amd64_rtools"
       deploy_latest: ${{ startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main' }}
+      deploy_versioned: ${{ startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main' }}
