--- a/.github/workflows/_extension_deploy.yml
+++ b/.github/workflows/_extension_deploy.yml
@@ -42,7 +42,7 @@ on:
       deploy_script:
         required: false
         type: string
-        default: "./scripts/extension-upload.sh"
+        default: "./duckdb/scripts/extension-upload-single.sh"
       # Override the default matrix parse script with a custom script
       matrix_parse_script:
         required: false
@@ -104,8 +104,10 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.S3_DUCKDB_ORG_DEPLOY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.S3_DUCKDB_ORG_DEPLOY_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.S3_DUCKDB_ORG_REGION }}
+          AWS_ENDPOINT_URL: ${{ secrets.S3_DUCKDB_ORG_ENDPOINT }}
           BUCKET_NAME: ${{ secrets.S3_DUCKDB_ORG_BUCKET }}
           DUCKDB_EXTENSION_SIGNING_PK: ${{ secrets.S3_DUCKDB_ORG_EXTENSION_SIGNING_PK }}
+          DUCKDB_DEPLOY_SCRIPT_MODE: for_real
         run: |
           pwd
           python3 -m pip install pip awscli
